# 1dv018-assignment2

./: .gitignore  README.md  activate.sh  assignment2_report.md  environment.yml  lint.sh  pyproject.toml
instructions/: programmeringsuppgift2.md  programmeringsuppgift2_handledning.md
notebooks/: task1_linked_list_demo.ipynb  task2_deque_demo.ipynb  task3_bst_demo.ipynb  task4_hashtable_demo.ipynb  task5_vehicle_registry_demo.ipynb
notebooks/exploration/: calculator.ipynb  hash.ipynb  stacks.ipynb
src/ads/: __init__.py  bst.py  deque.py  hashtable.py  linked_list.py  vehicle.py
src/learning/calc/: loop.py  op.py
src/learning/stack/: llstack.py
src/stack/: llstack.py
