[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ads"
version = "0.1.0"
description = "Assignment 2 data structures (linked list, deque, BST, hashtable)"
requires-python = ">=3.12"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["ads*"]

# Ruff configs below

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"
exclude = [
  ".bzr",".direnv",".eggs",".git",".git-rewrite",".hg",".mypy_cache",".nox",
  ".pants.d",".pytype",".ruff_cache",".svn",".tox",".venv","__pypackages__",
  "_build","build","dist","node_modules","venv"
]

[tool.ruff.lint]
select = ["E","F","W","I","UP","B","C","PL"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.isort]

known-first-party = ["ads"]
